# SRE-Agent-Onprem

./: README.md
onprem-sre-agent/: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.dev.yml  pyproject.toml
onprem-sre-agent/.github/workflows/: ci.yml
onprem-sre-agent/adapters/actions/: change_feed.py  executor.py  typed_adapters.py
onprem-sre-agent/adapters/itsm/: clients.py
onprem-sre-agent/adapters/telemetry/: azure_arc.py  azure_monitor.py  collectors.py  factory.py  providers.py  stub.py
onprem-sre-agent/agents/change_correlation/: agent.py  prompts.py  schemas.py
onprem-sre-agent/agents/evidence/: agent.py  prompts.py  schemas.py
onprem-sre-agent/agents/executor/: agent.py
onprem-sre-agent/agents/planner/: agent.py  prompts.py  schemas.py
onprem-sre-agent/agents/rca/: agent.py  prompts.py  schemas.py
onprem-sre-agent/agents/triage/: agent.py  evidence_intents.py  prompts.py  schemas.py
onprem-sre-agent/alembic/: env.py
onprem-sre-agent/alembic/versions/: 0001_initial.py
onprem-sre-agent/eval/datasets/: compute_performance_incidents.json
onprem-sre-agent/onprem_sre_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
onprem-sre-agent/tests/: conftest.py  smoke-test.ps1  smoke_llm_env.py  smoke_route_http.py  start-backend-services.ps1  test_agent_llm_path.py  test_agent_runtime.py  test_autonomy_policy.py  test_execution_trace.py  test_full_agentic_llm_flow.py  test_hybrid_router.py  test_incident_flow.py  test_policy_engine_context.py  test_response_plan_matcher.py  verify_triage_llm_vs_stub.py
(+54 files in other folders)
